packages/typ/tests/fixtures/diagnostics/0304_fun_recursive_self_application_07.ml.expected
File "0304_fun_recursive_self_application_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0304_fun_recursive_self_application_07 is not a valid module name.

File "0304_fun_recursive_self_application_07.ml", line 1, characters 22-23:
1 | let rec bad_eta x = x x
                          ^
Error: The value x has type 'a -> 'b but an expression was expected of type
         'a
       The type variable 'a occurs inside 'a -> 'b
