packages/typ/tests/fixtures/diagnostics/0304_fun_recursive_self_application_07.ml
let rec bad_eta x = x x
